[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complyedge"
version = "0.2.2"
description = "Python SDK for ComplyEdge Compliance API — runtime EU AI Act enforcement for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "ComplyEdge", email = "support@complyedge.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "click>=8.0",
]

[project.scripts]
complyedge = "complyedge.cli:main"

[project.urls]
Homepage = "https://complyedge.io"
Repository = "https://github.com/complyedge/complyedge-platform"
Documentation = "https://complyedge.io/docs"
Issues = "https://github.com/complyedge/complyedge-platform/issues"

[project.optional-dependencies]
agents = ["openai-agents>=0.2.7"]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["complyedge*"]
